[tool.poetry]
name = "doclaoyout-yolo-annotator"
version = "0.1.0"
description = ""
authors = ["Daisuke Hashimoto <galapagosit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
doclayout-yolo = "^0.0.2"
huggingface-hub = "^0.26.2"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
